Commit desde VS Code

--- a/helloworld.html
+++ b/helloworld.html
@@ -7,7 +7,7 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <h1>Sitio Web Coool</h1>
+    <h1>Sitio Web Profesional</h1>
     <p>Saludos People</p>
     <p>Por favor cuentame que te parecio el curso </p>
     <p>Como te va con el?</p>
